test/tests/compiler/18_structures/valid/preprocess_with_m4/plx1_m4_ifdef.plx
# https://www.cs.auckland.ac.nz/references/unix/digital/APS32DTE/DOCU_006.HTM

# TODO

m4_ifdef(`MAGIC_VAL', `
magic_char: char = M4_CHAR(*)
', `
pub fn main(none) i32 {
    return 0
}
')m4_dnl
